# task-manager

./: .gitignore  Avto.qml  CMakeLists.txt  Main.qml  authmanager.cpp  authmanager.h  main.cpp
.github/workflows/: build-apk.yml
android/: AndroidManifest.xml
